--- a/FrigateApp/Controls/RtspSharpPlayer.axaml
+++ b/FrigateApp/Controls/RtspSharpPlayer.axaml
@@ -1,6 +1,7 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="FrigateApp.Controls.RtspSharpPlayer"
+             x:CompileBindings="True"
              ClipToBounds="True"
              Background="Black">
 
