--- a/FrigateApp/Controls/TimelineControl.axaml
+++ b/FrigateApp/Controls/TimelineControl.axaml
@@ -1,6 +1,7 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="FrigateApp.Controls.TimelineControl">
+             x:Class="FrigateApp.Controls.TimelineControl"
+             x:CompileBindings="True">
     <Border Background="#252525" CornerRadius="4" Padding="4,6" MinHeight="36">
         <Canvas x:Name="SegmentCanvas" MinHeight="24"/>
     </Border>
