--- a/FrigateApp/Views/EventsView.axaml
+++ b/FrigateApp/Views/EventsView.axaml
@@ -5,7 +5,8 @@
              xmlns:localconv="using:FrigateApp.Converters"
              xmlns:controls="using:FrigateApp.Controls"
              x:Class="FrigateApp.Views.EventsView"
-             x:DataType="vm:EventsViewModel">
+             x:DataType="vm:EventsViewModel"
+             x:CompileBindings="True">
 
     <Grid RowDefinitions="Auto,Auto,*">
         <Border Grid.Row="0" Background="#1a1a1a" Padding="12,8" BorderBrush="#333" BorderThickness="0,0,0,1">
