--- a/FrigateApp/Views/SettingsView.axaml
+++ b/FrigateApp/Views/SettingsView.axaml
@@ -2,7 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="using:FrigateApp.ViewModels"
              x:Class="FrigateApp.Views.SettingsView"
-             x:DataType="vm:SettingsViewModel">
+             x:DataType="vm:SettingsViewModel"
+             x:CompileBindings="True">
 
     <Grid RowDefinitions="Auto,*">
         <!-- Верхняя панель -->
